Adds login & register pages, back-button widget.

--- a/mddfront/public/reset.css
+++ b/mddfront/public/reset.css
@@ -1,7 +1,7 @@
 /*
-shamefully stolen from :
-https://www.joshwcomeau.com/css/custom-css-reset/ 
-*/
+ * shamefully stolen from :
+ * https://www.joshwcomeau.com/css/custom-css-reset/ 
+ */
 
 /* 1. Use a more-intuitive box-sizing model */
 *,
