--- a/mddfront/src/pages/connect/connect.component.html
+++ b/mddfront/src/pages/connect/connect.component.html
@@ -3,13 +3,18 @@
     <img src="mdd_logo.png" alt="mdd logo." />
   </figure>
   <nav>
-    <custom-button
-      [text]="'Se connecter'"
-      [classes]="{ outlined: true, disabled: false }"
-    ></custom-button>
-    <custom-button
-      [text]="'S\'inscrire'"
-      [classes]="{ outlined: true, disabled: false }"
-    ></custom-button>
+    <a routerLink="/login">
+      <custom-button
+        [text]="'Se connecter'"
+        [classes]="{ outlined: true, disabled: false }"
+      ></custom-button>
+    </a>
+
+    <a routerLink="/register">
+      <custom-button
+        [text]="'S\'inscrire'"
+        [classes]="{ outlined: true, disabled: false }"
+      ></custom-button>
+    </a>
   </nav>
 </main>
