--- a/mddfront/src/shared/input/input.component.scss
+++ b/mddfront/src/shared/input/input.component.scss
@@ -1,11 +1,19 @@
+:host {
+display: block;
+width: 100%;
+max-width: fit-content;
+}
+
 label {
   display: block;
+  width: fit-content;
 }
 
 input {
   padding: 0.4rem;
   border-radius: 0.4rem;
   border: 1px solid black;
+  margin-bottom: 1rem;
 
   width: 100%;
   max-width: 250px;
