--- a/mddfront/src/features/authentication/ui/loginForm/loginForm.component.html
+++ b/mddfront/src/features/authentication/ui/loginForm/loginForm.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="handleSubmit()">
+<form class="login-form" [formGroup]="loginForm" (ngSubmit)="handleSubmit()">
   <custom-input
     label="Courriel ou nom d'utilisateur"
     type="text"
