--- a/mddfront/src/pages/login/login.component.html
+++ b/mddfront/src/pages/login/login.component.html
@@ -1,2 +1,5 @@
-<h1>Se connecter</h1>
-<login-form></login-form>
+<div class="login-wrapper">
+  <back-button></back-button>
+  <h1>Se connecter</h1>
+  <login-form></login-form>
+</div>
