--- a/mddfront/src/shared/menu/menu.component.html
+++ b/mddfront/src/shared/menu/menu.component.html
@@ -1,3 +1,14 @@
-<div class="menu-wrapper">
-<img src="mdd_logo.png" alt="">
-</div>
+<img src="mdd_logo.png" alt="" />
+<button class="burger">
+  <img src="burger.png" alt="Trois segments horizontaux parallèles." />
+</button>
+<nav>
+  <a routerLink="/posts" routerLinkActive="active">Articles</a>
+  <a routerLink="/topics" routerLinkActive="active">Thèmes</a>
+  <a id="profile" routerLink="/profile">
+    <img
+      src="user.png"
+      alt="Silouhette abstraite tracées en mauve sur fond gris."
+    />
+  </a>
+</nav>
