--- a/mddfront/src/features/authentication/ui/registerForm/registerForm.component.html
+++ b/mddfront/src/features/authentication/ui/registerForm/registerForm.component.html
@@ -11,6 +11,10 @@
     [required]="true"
     [placeholder]="'JohnDoe'"
   />
+  <p *ngIf="username?.hasError('required')" class="invalid">Champs requis.</p>
+  <p *ngIf="username?.hasError('maxlength')" class="invalid">
+    Le nom doit comporter au plus 256 caractères.
+  </p>
 
   <custom-input
     label="Courriel"
@@ -20,6 +24,13 @@
     [required]="true"
     [placeholder]="'john.doe@mail.me'"
   />
+  <p *ngIf="email?.hasError('required')" class="invalid">Champs requis.</p>
+  <p *ngIf="email?.hasError('maxlength')" class="invalid">
+    Le nom doit comporter au plus 256 caractères.
+  </p>
+  <p *ngIf="email?.hasError('pattern')" class="invalid">
+    L'adresse courriel doit être valide.
+  </p>
 
   <custom-input
     label="Mot de passe"
@@ -27,7 +38,19 @@
     id="password"
     formControlName="password"
     [required]="true"
+    [placeholder]="'*********'"
   />
+  <p *ngIf="password?.hasError('required')" class="invalid">Champs requis.</p>
+  <p *ngIf="password?.hasError('minlength')" class="invalid">
+    Le nom doit comporter au moins 8 caractères.
+  </p>
+  <p *ngIf="password?.hasError('maxlength')" class="invalid">
+    Le nom doit comporter au plus 256 caractères.
+  </p>
+  <p *ngIf="password?.hasError('pattern')" class="invalid">
+    Le mot de passe doit contenir au moins un chiffre, une lettre minuscule, une
+    majuscule et un caractère spécial.
+  </p>
 
   <custom-button type="submit" text="S'inscrire"></custom-button>
 </form>
