--- a/mddfront/src/features/authentication/ui/registerForm/registerForm.component.scss
+++ b/mddfront/src/features/authentication/ui/registerForm/registerForm.component.scss
@@ -5,3 +5,13 @@ form.register-form {
   width: fit-content;
   max-width: 250px;
 }
+
+.invalid {
+  font-size: 0.8rem;
+  color: red;
+  width: 100%;
+
+  &:last-child {
+    margin-bottom: 1rem;
+  }
+}
