--- a/mddfront/src/pages/login/login.component.html
+++ b/mddfront/src/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-wrapper">
-  <back-button></back-button>
+  <back-button route="/connect"></back-button>
   <h1>Se connecter</h1>
   <login-form></login-form>
 </div>
