--- a/mddfront/src/pages/register/register.component.html
+++ b/mddfront/src/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register-wrapper">
-  <back-button></back-button>
+  <back-button route="/connect"></back-button>
   <h1>Inscription</h1>
   <register-form />
 </div>
