--- a/mddfront/src/shared/button/button.component.scss
+++ b/mddfront/src/shared/button/button.component.scss
@@ -7,6 +7,8 @@ button {
   border-radius: 0.4rem;
   border: none;
   font-weight: bold;
+  margin-top: 0.8rem;
+  margin-bottom: 1rem;
 
   &.outlined {
     background-color: white;
