--- a/mddfront/src/shared/menu/menu.component.html
+++ b/mddfront/src/shared/menu/menu.component.html
@@ -1,8 +1,8 @@
-<img src="mdd_logo.png" alt="" />
-<button class="burger">
+<img src="mdd_logo.png" alt="" (click)="goConnect()" />
+<button class="burger" (click)="toggleDisplay()">
   <img src="burger.png" alt="Trois segments horizontaux parallèles." />
 </button>
-<nav>
+<nav class="menu-nav" [class]="classes">
   <a routerLink="/posts" routerLinkActive="active">Articles</a>
   <a routerLink="/topics" routerLinkActive="active">Thèmes</a>
   <a id="profile" routerLink="/profile">
