--- a/mddfront/src/pages/connect/connect.component.html
+++ b/mddfront/src/pages/connect/connect.component.html
@@ -3,14 +3,14 @@
     <img src="mdd_logo.png" alt="mdd logo." />
   </figure>
   <nav>
-    <a routerLink="/login">
+    <a routerLink="/login" routerLinkActive="active">
       <custom-button
         [text]="'Se connecter'"
         [classes]="{ outlined: true, disabled: false }"
       ></custom-button>
     </a>
 
-    <a routerLink="/register">
+    <a routerLink="/register" routerLinkActive="active">
       <custom-button
         [text]="'S\'inscrire'"
         [classes]="{ outlined: true, disabled: false }"
