--- a/mddfront/src/widgets/backButton/ui/backButton.component.html
+++ b/mddfront/src/widgets/backButton/ui/backButton.component.html
@@ -1,3 +1,5 @@
-<button class="back-navigation-button" (click)="handleClick()">
+<a [routerLink]="route">
+<button class="back-navigation-button">
   <img src="back_arrow.png" alt="Black arrow pointing left." />
 </button>
+</a>
