Adds Topics (into Profile page too) + fixes router.

--- a/mddfront/src/app/app.component.html
+++ b/mddfront/src/app/app.component.html
@@ -1,2 +1,5 @@
-<menu *ngIf="menuDisplay"></menu>
+<menu
+  [ngClass]="{ displayed: menuIsVisible }"
+  [navIsVisible]="navIsVisible"
+></menu>
 <router-outlet></router-outlet>
