--- a/mddfront/src/app/app.component.scss
+++ b/mddfront/src/app/app.component.scss
@@ -1,7 +1,10 @@
-:host {
+:host::ng-deep {
   min-height: 100vh;
-  min-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .displayed {
+    display: flex;
+  }
 }
