--- a/mddfront/src/pages/profile/components/update-user-form/update-user-form.component.scss
+++ b/mddfront/src/pages/profile/components/update-user-form/update-user-form.component.scss
@@ -1,9 +1,16 @@
-form.update-user-form {
+:host {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  width: fit-content;
+  margin: 0 auto;
   max-width: 250px;
+
+  form.update-user-form {
+    display: flex;
+    flex-flow: row wrap;
+    width: fit-content;
+    justify-content: center;
+  }
 }
 
 .invalid {
