--- a/mddfront/src/pages/profile/profile.component.scss
+++ b/mddfront/src/pages/profile/profile.component.scss
@@ -1,14 +1,26 @@
+:host {
+  margin-bottom: 2rem;
+}
+
 .profile-wrapper {
   height: fit-content;
   padding: 1rem;
+  margin-top: 7rem;
 }
 
-h1 {
+h2 {
   width: 100%;
   text-align: center;
   font-weight: 400;
   margin-bottom: 5vh;
   font-weight: bold;
+}
+
+hr {
+  width: 100%;
+  max-width: 80vw;
+  margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 .logout-button::ng-deep {
@@ -18,4 +30,16 @@ h1 {
   button {
     margin: 0;
   }
+}
+
+.topics {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 400px));
+  gap: 0.8rem 0.4rem;
+  justify-content: center;
+
+  width: 100vh;
+  padding: 1rem;
+  height: 100%;
+  // max-width: calc(3 * 400px + 4 * 1rem);
 }
