--- a/mddfront/src/shared/button/button.component.scss
+++ b/mddfront/src/shared/button/button.component.scss
@@ -3,7 +3,7 @@
 button {
   background-color: $primary-color;
   color: white;
-  padding: 0.4rem;
+  padding: 0.4rem 2rem;
   border-radius: 0.4rem;
   border: none;
   font-weight: bold;
