--- a/mddfront/src/shared/menu/menu.component.scss
+++ b/mddfront/src/shared/menu/menu.component.scss
@@ -7,8 +7,9 @@
   height: 6rem;
   width: 100%;
   border-bottom: 1px solid black;
+  background-color: white;
 
-  display: flex;
+  display: none;
   flex-flow: row nowrap;
   align-items: center;
 
@@ -22,6 +23,7 @@
   }
 
   button {
+    display: none;
     background-color: transparent;
     border: none;
     height: 1rem;
@@ -35,9 +37,9 @@
   }
 
   nav {
+    display: none;
     transition: transform 0.3s ease-in-out;
     margin-left: auto;
-    display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     gap: 1rem;
@@ -45,6 +47,10 @@
     width: fit-content;
     font-weight: bold;
     position: static;
+
+    &.displayed {
+      display: flex;
+    }
 
     &.hidden {
       transform: translateX(100%);
