--- a/mddfront/src/app/app.component.scss
+++ b/mddfront/src/app/app.component.scss
@@ -4,7 +4,8 @@
   justify-content: center;
   align-items: center;
 
-  .displayed {
-    display: flex;
+  .out-of-frame {
+    overflow: hidden;
+    clip: rect(0 0 0 0);
   }
 }
