--- a/mddfront/src/pages/topics/topics.component.html
+++ b/mddfront/src/pages/topics/topics.component.html
@@ -1,6 +1,6 @@
 <main>
   <topic
-    *ngFor="let topic of templateTopics"
+    *ngFor="let topic of templateTopic"
     [userId]="user.id"
     [topic]="topic"
   ></topic>
