Adds post-details page logic.

--- a/mddfront/src/entities/Post/ui/post.component.html
+++ b/mddfront/src/entities/Post/ui/post.component.html
@@ -6,4 +6,5 @@
     <span></span>
   </div>
   <p class="content">{{ "Content: " + post.content }}</p>
+  <a class="go-to-post" (click)="goToPost(post.id)"></a>
 </article>
