--- a/mddfront/src/entities/Post/ui/post.component.scss
+++ b/mddfront/src/entities/Post/ui/post.component.scss
@@ -3,6 +3,7 @@
   border-radius: 0.5rem;
   background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
+  position: relative;
 
   p.content {
     margin-bottom: 0.6rem;
@@ -20,5 +21,15 @@
     align-items: center;
     margin-top: 0.6rem;
     margin-bottom: 0.6rem;
+  }
+
+  .go-to-post {
+    &::after {
+      content: "";
+      cursor: pointer;
+      position: absolute;
+      inset-block: 0;
+      inset-inline: 0;
+    }
   }
 }
