--- a/mddfront/src/pages/posts/posts.component.scss
+++ b/mddfront/src/pages/posts/posts.component.scss
@@ -41,6 +41,18 @@
 
   width: 100%;
   padding: 1rem;
-padding-bottom: 2rem;
+  padding-bottom: 2rem;
   max-width: calc(3 * 400px + 4 * 1rem);
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
