--- a/mddfront/src/shared/menu/menu.component.scss
+++ b/mddfront/src/shared/menu/menu.component.scss
@@ -13,13 +13,18 @@
   flex-flow: row nowrap;
   align-items: center;
 
+  z-index: 100;
+
   a:has(img) {
+    display: block;
     height: 100%;
   }
 
   img {
     height: 100%;
+    width: auto;
     cursor: pointer;
+    object-fit: contain;
   }
 
   button {
@@ -33,6 +38,10 @@
 
     @media screen and (min-width: 768px) {
       display: none;
+    }
+
+    img {
+      min-width: min-content;
     }
   }
 
