Adds post-create and post-create-form logic + structure + style.

--- a/mddfront/src/shared/input/input.component.html
+++ b/mddfront/src/shared/input/input.component.html
@@ -1,11 +1,11 @@
-<label [for]="id">{{ label }}</label>
+<label [ngClass]="{'sr-only' : classes.labelSr}" [for]="id">{{ label }}</label>
 <input
   [name]="name"
   [type]="type"
   [id]="id"
   [placeholder]="placeholder"
   [required]="required"
-  [class]="classes"
+  [ngClass]="{'disabled' : classes.disabled}"
   [value]="value"
   (input)="handleInput($event)"
 />
