--- a/mddfront/src/entities/Post/ui/post.component.scss
+++ b/mddfront/src/entities/Post/ui/post.component.scss
@@ -3,6 +3,7 @@
   border-radius: 0.5rem;
   background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
+height: 100%;
   position: relative;
 
   p.content {
