--- a/mddfront/src/features/authentication/ui/loginForm/login-form.component.html
+++ b/mddfront/src/features/authentication/ui/loginForm/login-form.component.html
@@ -28,8 +28,8 @@
     Le nom doit comporter au plus 256 caractères.
   </p>
   <p *ngIf="password?.hasError('pattern')" class="invalid">
-    Le mot de passe doit contenir au moins un
-    chiffre, une lettre minuscule, une majuscule et un caractère spécial.
+    Le mot de passe doit contenir au moins un chiffre, une lettre minuscule, une
+    majuscule et un caractère spécial.
   </p>
 
   <custom-button type="submit" text="Se connecter"></custom-button>
