Adds comment form logic + structure + style.

--- a/mddfront/src/pages/post-create/components/post-create-form.component.html
+++ b/mddfront/src/pages/post-create/components/post-create-form.component.html
@@ -34,6 +34,7 @@
   </p>
 
   <div>
+    <label for="content" class="sr-only">Contenu de l'article</label>
     <textarea
       name="content"
       id="content"
