--- a/mddfront/src/entities/Comment/ui/comment.component.scss
+++ b/mddfront/src/entities/Comment/ui/comment.component.scss
@@ -3,6 +3,7 @@
   flex-flow: row wrap;
   gap: 1rem;
   padding: 0 2rem;
+  margin-bottom: 1rem;
 
   span {
     @media screen and (max-width: 768px) {
