--- a/mddfront/src/pages/post-details/post-details.component.html
+++ b/mddfront/src/pages/post-details/post-details.component.html
@@ -14,4 +14,5 @@
     <h2>Commentaires</h2>
     <comment *ngFor="let comment of comments" [comment]="comment"></comment>
   </section>
+  <comment-create-form [post]="post.id"/>
 </main>
