Handle pagination (sorting to come).

--- a/mddfront/src/pages/posts/posts.component.html
+++ b/mddfront/src/pages/posts/posts.component.html
@@ -14,4 +14,8 @@
     </div>
     <post *ngFor="let post of templatePosts" [post]="post"></post>
   </section>
+  <nav>
+    <custom-button [text]="'←'" (click)="decrementPage()"></custom-button>
+    <custom-button [text]="'→'" (click)="incrementPage()"></custom-button>
+  </nav>
 </main>
