--- a/mddfront/src/pages/posts/posts.component.scss
+++ b/mddfront/src/pages/posts/posts.component.scss
@@ -10,6 +10,14 @@
 .main-posts {
   width: 100%;
   max-width: calc(3 * 400px + 4 * 1rem);
+  height: fit-content;
+
+  nav {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+  }
 }
 
 .sorting {
@@ -49,7 +57,7 @@
 
   width: 100%;
   padding: 1rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   max-width: calc(3 * 400px + 4 * 1rem);
 }
 
