--- a/mddfront/src/pages/profile/profile.component.scss
+++ b/mddfront/src/pages/profile/profile.component.scss
@@ -38,8 +38,8 @@ hr {
   gap: 0.8rem 0.4rem;
   justify-content: center;
 
-  width: 100vh;
+  width: 100%;
   padding: 1rem;
   height: 100%;
-  // max-width: calc(3 * 400px + 4 * 1rem);
+  max-width: calc(3 * 400px + 4 * 1rem);
 }
