--- a/mddfront/src/pages/posts/posts.component.html
+++ b/mddfront/src/pages/posts/posts.component.html
@@ -16,6 +16,7 @@
   </section>
   <nav>
     <custom-button [text]="'←'" (click)="decrementPage()"></custom-button>
+    <span>{{ page }} / {{ maxPage }}</span>
     <custom-button [text]="'→'" (click)="incrementPage()"></custom-button>
   </nav>
 </main>
