Comments order (fix async.) + Pagination style.

--- a/mddfront/src/pages/posts/posts.component.html
+++ b/mddfront/src/pages/posts/posts.component.html
@@ -16,7 +16,7 @@
   </section>
   <nav>
     <custom-button [text]="'←'" (click)="decrementPage()"></custom-button>
-    <span>{{ page }} / {{ maxPage }}</span>
+    <span class="pagination">{{ page }} / {{ maxPage }}</span>
     <custom-button [text]="'→'" (click)="incrementPage()"></custom-button>
   </nav>
 </main>
