--- a/mddfront/src/pages/profile/components/update-user-form/update-user-form.component.html
+++ b/mddfront/src/pages/profile/components/update-user-form/update-user-form.component.html
@@ -32,5 +32,24 @@
     L'adresse courriel doit être valide.
   </p>
 
+<custom-input
+    label="Mot de passe"
+    type="password"
+    id="password"
+    formControlName="password"
+    [required]="true"
+    [placeholder]="'*********'"
+  />
+  <p *ngIf="password?.hasError('minlength')" class="invalid">
+    Le nom doit comporter au moins 8 caractères.
+  </p>
+  <p *ngIf="password?.hasError('maxlength')" class="invalid">
+    Le nom doit comporter au plus 256 caractères.
+  </p>
+  <p *ngIf="password?.hasError('pattern')" class="invalid">
+    Le mot de passe doit contenir au moins un chiffre, une lettre minuscule, une
+    majuscule et un caractère spécial.
+  </p>
+
   <custom-button type="submit" text="Sauvegarder"></custom-button>
 </form>
